@@ -25,6 +25,7 @@ echo "* Checking basic perf_event functionality"
 ./validation/simple_overflow_sibling
 ./validation/format_id_support
 ./validation/non-existent
+./validation/breakpoint_support
 
 echo
 echo "* Checking bugs that PAPI has to work around"
